native/ailia.h


#define AILIA_STATUS_SUCCESS (0)
#define AILIA_STATUS_INVALID_ARGUMENT (-1)
struct AILIANetwork;
#define AILIA_SHAPE_VERSION (1)
typedef struct _AILIAShape {
	unsigned int x;
	unsigned int y;
	unsigned int z;
	unsigned int w;
	unsigned int dim;
} AILIAShape;
int AILIA_API ailiaSetInputShape(struct AILIANetwork* net, const AILIAShape* shape, unsigned int version);
int AILIA_API ailiaSetInputShapeND(struct AILIANetwork* net, const unsigned int* shape, unsigned int dim);
int AILIA_API ailiaGetBlobCount(struct AILIANetwork* net, unsigned int* blob_count);
int AILIA_API ailiaGetBlobData(struct AILIANetwork* net, void* dest, unsigned int dest_size, unsigned int blob_idx);
int AILIA_API ailiaGetInputBlobCount(struct AILIANetwork* net, unsigned int* input_blob_count);
int AILIA_API ailiaGetBlobIndexByInputIndex(struct AILIANetwork* net, unsigned int* blob_idx, unsigned int input_blob_idx);
int AILIA_API ailiaSetInputBlobData(struct AILIANetwork* net, const void* src, unsigned int src_size, unsigned int blob_idx);
int AILIA_API ailiaSetInputBlobShape(struct AILIANetwork* net, const AILIAShape* shape, unsigned int blob_idx, unsigned int version);
int AILIA_API ailiaSetInputBlobShapeND(struct AILIANetwork* net, const unsigned* shape, const unsigned dim, unsigned int blob_idx);
int AILIA_API ailiaCopyBlobData(struct AILIANetwork* dst_net, unsigned int dst_blob_idx, struct AILIANetwork* src_net, unsigned int src_blob_idx);
int AILIA_API ailiaUpdate(struct AILIANetwork* net);
int AILIA_API ailiaGetOutputBlobCount(struct AILIANetwork* net, unsigned int* output_blob_count);