lib/ffi/ailia.dart


  /// \~japanese
  /// @brief 入力データ(Blob)のインデックスを取得します
  /// @param net ネットワークオブジェクトポインタ
  /// @param blob_idx blobのインデックス(0～ ailiaGetBlobCount() -1)
  /// @param input_blob_idx 入力blob内でのインデックス(0～ ailiaGetInputBlobCount() -1)
  /// @return
  /// 成功した場合は \ref AILIA_STATUS_SUCCESS 、そうでなければエラーコードを返す。
  /// @details
  /// このAPIはailiaOpenStreamXXX呼び出し後より利用可能です。
  /// なお、ailiaOpenStreamXXX呼び出し時に列挙されたinput_blob_idx及びblob_idxは保持されるためailiaOpneWeightXXX呼び出し後も同じ値が返ることが保証されます。
  ///
  /// \~english
  /// @brief Get the blob index of the input data.
  /// @param net A network instance pointer
  /// @param blob_idx index of the blob (between 0 and  ailiaGetBlobCount() -1)
  /// @param input_blob_idx index among the input blobs (between 0 and  ailiaGetInputBlobCount() -1)
  /// @return
  /// If this function is successful, it returns  \ref AILIA_STATUS_SUCCESS , or an error code otherwise.
  /// @details
  /// This API can be call after call ailiaOpenStreamXXX().
  /// In addition, we guarantee that input_blob_idx and blob_idx which enumerate when call ailiaOpenStreamXXX are not changed when call ailiaOpneWeightXXX.
  int ailiaGetBlobIndexByInputIndex(
    ffi.Pointer<AILIANetwork> net,
    ffi.Pointer<ffi.Uint32> blob_idx,
    int input_blob_idx,
  ) {
    return _ailiaGetBlobIndexByInputIndex(
      net,
      blob_idx,
      input_blob_idx,
    );
  }

  late final _ailiaGetBlobIndexByInputIndexPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(ffi.Pointer<AILIANetwork>, ffi.Pointer<ffi.Uint32>,
              ffi.Uint32)>>('ailiaGetBlobIndexByInputIndex');
  late final _ailiaGetBlobIndexByInputIndex =
      _ailiaGetBlobIndexByInputIndexPtr.asFunction<
          int Function(
              ffi.Pointer<AILIANetwork>, ffi.Pointer<ffi.Uint32>, int)>();

  /// \~japanese
  /// @brief 指定したBlobに入力データを与えます。
  /// @param net ネットワークオブジェクトポインタ
  /// @param src 推論データ X,Y,Z,Wの順でnumeric型で格納
  /// @param src_size 推論データのbyte数
  /// @param blob_idx 入力するblobのインデックス
  /// @return
  /// 成功した場合は \ref AILIA_STATUS_SUCCESS 、そうでなければエラーコードを返す。
  /// @details
  /// 複数入力があるネットワークなどで入力を指定する場合に用います。
  /// blob_idxで入力レイヤーのblob以外のものを指定した場合、 \ref AILIA_STATUS_INVALID_ARGUMENT が返ります。
  /// このAPIはailiaOpenWeighXXX呼び出し後より利用可能です。
  ///
  /// \~english
  /// @brief Provides the specified blob with the input data.
  /// @param net A network instance pointer
  /// @param src The inference data is stored as numeric type data in the order of X, Y, Z, and W.
  /// @param src_size The number of bytes of the inference data
  /// @param blob_idx The index of the blob for input
  /// @return
  /// If this function is successful, it returns  \ref AILIA_STATUS_SUCCESS , or an error code otherwise.
  /// @details
  /// This function is used to specify the input on networks with multiple inputs.
  /// If something other than a blob in the input layer is specified for blob_idx, the function returns  \ref
  /// AILIA_STATUS_INVALID_ARGUMENT .
  /// This API can be call after call ailiaOpenWeighXXX().
  int ailiaSetInputBlobData(
    ffi.Pointer<AILIANetwork> net,
    ffi.Pointer<ffi.Void> src,
    int src_size,
    int blob_idx,
  ) {
    return _ailiaSetInputBlobData(
      net,
      src,
      src_size,
      blob_idx,
    );
  }

  late final _ailiaSetInputBlobDataPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(ffi.Pointer<AILIANetwork>, ffi.Pointer<ffi.Void>,
              ffi.Uint32, ffi.Uint32)>>('ailiaSetInputBlobData');
  late final _ailiaSetInputBlobData = _ailiaSetInputBlobDataPtr.asFunction<
      int Function(
          ffi.Pointer<AILIANetwork>, ffi.Pointer<ffi.Void>, int, int)>();

  /// \~japanese
  /// @brief 指定したBlobの形状を変更します。
  /// @param net ネットワークオブジェクトポインタ
  /// @param shape 入力データの形状情報
  /// @param blob_idx 変更するblobのインデックス
  /// @param version AILIA_SHAPE_VERSION
  /// @return
  /// 成功した場合は \ref AILIA_STATUS_SUCCESS 、そうでなければエラーコードを返す。
  /// @details
  /// 複数入力があるネットワークなどで入力形状を変更する場合に用います。
  /// blob_idxは入力レイヤーのblob以外のものを指定した場合 \ref AILIA_STATUS_INVALID_ARGUMENT が返ります。
  /// その他の注意点は ailiaSetInputShape() の解説を参照してください。
  /// 入力形状のランクが5次元以上の場合は ailiaSetInputBlobShapeND() を利用してください。
  /// このAPIはailiaOpenWeighXXX呼び出し後より利用可能です。
  ///
  /// \~english
  /// @brief Change the shape of the blob given by its index
  /// @param net network object pointer
  /// @param shape new shape of the blob
  /// @param blob_idx index referencing the blob to reshape
  /// @param version AILIA_SHAPE_VERSION
  /// @return
  /// In case of success,  \ref AILIA_STATUS_SUCCESS , and otherwise the coresponding error code.
  /// @details
  /// This is useful to change the network input shape in a context where there are several input blobs.
  /// If blob_idx does not correspond to an input layer,  \ref AILIA_STATUS_INVALID_ARGUMENT  is returned.
  /// For other related remarks, see the documentation of  ailiaSetInputShape().
  /// If dimension of shape has 5 or more, please use  ailiaSetInputBlobShapeND().
  /// This API can be call after call ailiaOpenWeighXXX().
  int ailiaSetInputBlobShape(
    ffi.Pointer<AILIANetwork> net,
    ffi.Pointer<AILIAShape> shape,
    int blob_idx,
    int version,
  ) {
    return _ailiaSetInputBlobShape(
      net,
      shape,
      blob_idx,
      version,
    );
  }

  late final _ailiaSetInputBlobShapePtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(ffi.Pointer<AILIANetwork>, ffi.Pointer<AILIAShape>,
              ffi.Uint32, ffi.Uint32)>>('ailiaSetInputBlobShape');
  late final _ailiaSetInputBlobShape = _ailiaSetInputBlobShapePtr.asFunction<
      int Function(
          ffi.Pointer<AILIANetwork>, ffi.Pointer<AILIAShape>, int, int)>();

  /// \~japanese
  /// @brief 指定したBlobの形状を変更します。
  /// @param net ネットワークオブジェクトポインタ
  /// @param shape 入力データの各次元の大きさの配列(dim-1, dim-2, ... ,1, 0)
  /// @param dim shapeの次元
  /// @param blob_idx 変更するblobのインデックス
  /// @return
  /// 成功した場合は \ref AILIA_STATUS_SUCCESS 、そうでなければエラーコードを返す。
  /// @details
  /// 複数入力があるネットワークなどで入力形状を変更する場合に用います。
  /// blob_idxは入力レイヤーのblob以外のものを指定した場合 \ref AILIA_STATUS_INVALID_ARGUMENT が返ります。
  /// その他の注意点は ailiaSetInputShapeND() の解説を参照してください。
  /// このAPIはailiaOpenWeighXXX呼び出し後より利用可能です。
  ///
  /// \~english
  /// @brief Change the shape of the blob given by its index
  /// @param net network object pointer
  /// @param shape An array of shape that contains size of each axis (dim-1, dim-2, ... ,1, 0)
  /// @param dim The size of shape.
  /// @param blob_idx index referencing the blob to reshape
  /// @return
  /// In case of success,  \ref AILIA_STATUS_SUCCESS , and otherwise the coresponding error code.
  /// @details
  /// This is useful to change the network input shape in a context where there are several input blobs.
  /// If blob_idx does not correspond to an input layer,  \ref AILIA_STATUS_INVALID_ARGUMENT  is returned.
  /// For other related remarks, see the documentation of  ailiaSetInputShapeND().
  /// This API can be call after call ailiaOpenWeighXXX().
  int ailiaSetInputBlobShapeND(
    ffi.Pointer<AILIANetwork> net,
    ffi.Pointer<ffi.Uint32> shape,
    int dim,
    int blob_idx,
  ) {
    return _ailiaSetInputBlobShapeND(
      net,
      shape,
      dim,
      blob_idx,
    );
  }

  late final _ailiaSetInputBlobShapeNDPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(ffi.Pointer<AILIANetwork>, ffi.Pointer<ffi.Uint32>,
              ffi.Uint32, ffi.Uint32)>>('ailiaSetInputBlobShapeND');
  late final _ailiaSetInputBlobShapeND =
      _ailiaSetInputBlobShapeNDPtr.asFunction<
          int Function(
              ffi.Pointer<AILIANetwork>, ffi.Pointer<ffi.Uint32>, int, int)>();

  /// \~japanese
  /// @brief 指定したBlob間でデータをコピーします
  ///
  /// @param dst_net コピー先のblobが含まれるネットワークオブジェクトポインター
  /// @param dst_blob_idx コピー先のblobのインデックス
  /// @param src_net コピー元のblobが含まれるネットワークオブジェクトポインター
  /// @param src_blob_idx コピー元のblobのインデックス
  /// @return
  /// 成功した場合は \ref AILIA_STATUS_SUCCESS 、そうでなければエラーコードを返す。
  /// @details
  /// 指定したネットワークのBlobをコピーします。コピー元とコピー先のネットワークは別のものを指定することができます。
  /// コピー先のBlobは入力Blobのインデックスを、コピー元のBlobは任意のBlobのインデックスを指定してください。
  /// コピー先にその他のBlobを指定した場合 \ref AILIA_STATUS_INVALID_ARGUMENT が返ります。
  /// このAPIはailiaOpenWeighXXX呼び出し後より利用可能です。
  ///
  /// \~english
  /// @brief Perform copies  between blobs that specified.
  ///
  /// @param dst_net The network object pointer that contains destination blob
  /// @param dst_blob_idx The index of destination blob
  /// @param src_net The network object pointer that contains source blob
  /// @param src_blob_idx The index of source blob
  /// @return
  /// In case of success,  \ref AILIA_STATUS_SUCCESS , and otherwise the coresponding error code.
  /// @details
  /// Perform copy blobs between specified network. It accepts copy over different network.
  /// The src_blob_index must be specify blob index that inputs of src_net, and the dst_blob_index mut be specify blob index that outputs of dst_net.
  /// If specify index of other blob for dst_blob_idx , this function returns \ref AILIA_STATUS_INVALID_ARGUMENT .
  /// This API can be call after call ailiaOpenWeighXXX().
  int ailiaCopyBlobData(
    ffi.Pointer<AILIANetwork> dst_net,
    int dst_blob_idx,
    ffi.Pointer<AILIANetwork> src_net,
    int src_blob_idx,
  ) {
    return _ailiaCopyBlobData(
      dst_net,
      dst_blob_idx,
      src_net,
      src_blob_idx,
    );
  }

  late final _ailiaCopyBlobDataPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(ffi.Pointer<AILIANetwork>, ffi.Uint32,
              ffi.Pointer<AILIANetwork>, ffi.Uint32)>>('ailiaCopyBlobData');
  late final _ailiaCopyBlobData = _ailiaCopyBlobDataPtr.asFunction<
      int Function(
          ffi.Pointer<AILIANetwork>, int, ffi.Pointer<AILIANetwork>, int)>();

  /// \~japanese
  /// @brief 事前に指定した入力データで推論を行います。
  /// @param net ネットワークオブジェクトポインタ
  /// @return
  /// 成功した場合は \ref AILIA_STATUS_SUCCESS 、そうでなければエラーコードを返す。
  /// @details
  /// ailiaSetInputBlobData() を用いて入力を与えた場合などに用います。
  /// 推論結果は ailiaGetBlobData() で取得してください。
  /// このAPIはailiaOpenWeighXXX呼び出し後より利用可能です。
  ///
  /// \~english
  /// @brief Makes inferences with the input data specified in advance.
  /// @param net A network instance pointer
  /// @return
  /// If this function is successful, it returns  \ref AILIA_STATUS_SUCCESS , or an error code otherwise.
  /// @details
  /// This function is used when, for example, the input is provided with  ailiaSetInputBlobData() .
  /// Get the inference result with  ailiaGetBlobData() .
  /// This API can be call after call ailiaOpenWeighXXX().
  int ailiaUpdate(
    ffi.Pointer<AILIANetwork> net,
  ) {
    return _ailiaUpdate(
      net,
    );
  }

  late final _ailiaUpdatePtr = _lookup<
          ffi.NativeFunction<ffi.Int32 Function(ffi.Pointer<AILIANetwork>)>>(
      'ailiaUpdate');
  late final _ailiaUpdate =
      _ailiaUpdatePtr.asFunction<int Function(ffi.Pointer<AILIANetwork>)>();

  /// \~japanese
  /// @brief 出力データ(Blob)の数を取得します。
  /// @param net ネットワークオブジェクトポインタ
  /// @param output_blob_count 出力blobの数の格納先
  /// @return
  /// 成功した場合は \ref AILIA_STATUS_SUCCESS 、そうでなければエラーコードを返す。
  /// @details
  /// このAPIはailiaOpenStreamXXX呼び出し後より利用可能です。
  ///
  /// \~english
  /// @brief Get the number of output data blobs.
  /// @param net A network instance pointer
  /// @param output_blob_count Storage location for the number of output blobs.
  /// @return
  /// If this function is successful, it returns  \ref AILIA_STATUS_SUCCESS , or an error code otherwise.
  /// @details
  /// This API can be call after call ailiaOpenStreamXXX().
  int ailiaGetOutputBlobCount(
    ffi.Pointer<AILIANetwork> net,
    ffi.Pointer<ffi.Uint32> output_blob_count,
  ) {
    return _ailiaGetOutputBlobCount(
      net,
      output_blob_count,
    );
  }
